--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,11 @@
 /* Generics */
 
 body{
-    font-family: sans-serif;
+    font-family: 'Rubik Mono One', sans-serif;
+}
+
+h1{
+    font-size: 56px;
 }
 
 /* Utils */
@@ -22,17 +26,33 @@ body{
 
 .page{
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.first-page{
+.bgc-red{
     background-color: #FF0000;
 
 }
 
-.second-page{
+.bgc-green{
     background-color: #008000;
 }
 
-.third-page{
+.bgc-yellow{
     background-color: #FFFF00;
+}
+
+.yellow{
+    color: #FFFF00;
+}
+
+.green{
+    color: #008000;
+}
+
+.content{
+    max-width: 50%;
+    text-align: center;
 }
